# IMAGE_Processing

./: CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  readme.txt
include/MagickCore/: magick-baseconfig.h  version.h
